# ROS-Projects

./: LICENSE  README.md
SkidSteer Drive/: CMakeLists.txt  package.xml
SkidSteer Drive/model/: steer.xacro
Spawns/scripts/: callspawn.py  spawn.py
depth/: CMakeLists.txt  package.xml
depth/launch/: all.launch  final.launch
depth/script/: controller.py  listeners.py  nav.py  tmp  weights.py
depth/urdf/: macro.xacro  steer.gazebo  steer.xacro  wheels.xacro
gpskid/: CMakeLists.txt  package.xml
gpskid/launch/: all.launch  final.launch
gpskid/script/: controller.py  listeners.py  nav.py
gpskid/urdf/: materials.xacro  steer.gazebo  steer.xacro
gpskid/worlds/: sky.world
lidar/: package.xml
lidar/worlds/: velodyne.world
lidskid/launch/: all.launch  final.launch
lidskid/models/: materials.xacro  steer.gazebo  steer.xacro  wheels.xacro
lidskid/script/: controller.py  nav.py  nav2.py  weights.py
lidskid/worlds/: sky.world
skid/launch/: final.launch  robo.launch  rviz.launch
skid/model/: lidar.xacro  steer.xacro
skidsteer/: CMakeLists.txt  package.xml
skidsteer/include/skidsteer/: skidsteer.h
skidsteer/launch/: robo.launch
skidsteer/model/: steer.xacro
skidsteer/rviz/: config.rviz
skidsteer/src/: main.cpp  skidsteer.cpp
