<?xml version="1.0"?>

<package format="2">
  <name>lidskid</name>
  <version>0.0.0</version>
  <description>Package with a 4 wheeled drive with a LiDAR</description>
  <license>MIT</license>
  <maintainer email="achyut@todo.todo">achyut</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>
</package>

