<?xml version="1.0"?>
<package format="2">

  <name>skidsteer</name>
  <version>0.0.0</version>
  <description>The skidsteer package</description>

  <maintainer email="achyut@todo.todo">achyut</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>velodyne_description</depend>
  <depend>velodyne_gazebo_plugins</depend>
  <depend>pointcloud_to_laserscan</depend>

</package>

